crates/tau-cli/tests/snapshots/json_schemas__init_json.snap
---
source: crates/tau-cli/tests/json_schemas.rs
expression: val
---
{
  "created": "tau.toml",
  "force": false,
  "path": "[PATH]"
}
