crates/tau-cli/tests/snapshots/json_schemas__list_agents_json.snap
---
source: crates/tau-cli/tests/json_schemas.rs
expression: val
---
[
  {
    "display_name": "Code Reviewer",
    "id": "reviewer",
    "llm_backend": "anthropic",
    "package": "code-reviewer@^0.1"
  }
]
