crates/tau-cli/tests/snapshots/json_schemas__run_failed_json.snap
---
source: crates/tau-cli/tests/json_schemas.rs
expression: val
---
{
  "outcome": "failed",
  "status": "Failed { kind: OutOfResources, detail: Some(\"max_turns (1) reached\") }",
  "token_usage": {
    "input_tokens": 0,
    "output_tokens": 0
  },
  "total_turns": 1
}
